# rusty-sword

./: .env  .gitignore  Cargo.toml  README.md  clippy.toml
configs/items/: medicine.toml  weapons_g1.toml
configs/monsters/: demon_scout.toml  demon_vulgar.toml
configs/npcs/: narootuh.toml
configs/player_starter/: archer.toml  knight.toml  mage.toml
migrations/: 20231121092115_create_users_table.sql  20231121150603_create_players_table.sql  20231121174057_add_deleted_at_to_players.sql  20231128150117_add_extra_points_to_players.sql  20231128171340_add_attack_to_players.sql  20231128180642_add_final_points_to_players.sql  20231128184441_create_items_table.sql  20231128225809_create_skills_table.sql
src/: main.rs  sandbox.rs  server.rs  sniffer.rs
src/bundles/: mod.rs  monster.rs  npc.rs  player.rs
src/components/: admin.rs  aggro.rs  animation.rs  appearance.rs  appearence.rs  base_points.rs  behead_timer.rs  beheadable.rs  cooldown.rs  current_health_points.rs  current_magic_points.rs  damage.rs  dead.rs  direction.rs  equipped_weapon.rs  experience.rs  experience_rate.rs  extra_points.rs  final_points.rs  id.rs  item.rs  item_quantity.rs  job.rs  level.rs  magical_attack.rs  maximum_health_points.rs  maximum_magic_points.rs  medicine.rs  mod.rs  monster.rs  network_observers.rs  network_writer.rs  normal_hit_animation.rs  npc.rs  observers.rs  physical_attack.rs  player.rs  player_owner.rs  position.rs  previous.rs  (+7 more)
src/configs/: items.rs  mod.rs  monsters.rs  npcs.rs  player_starter.rs
src/enums/: damage_type.rs  level_color.rs  mod.rs  player_class.rs  target_type.rs
src/framework/: database.rs  entity_map.rs  mod.rs  packet.rs  packet_queue.rs  player.rs  user.rs  world.rs
src/handlers/: authenticate.rs  chat_message.rs  emote.rs  mod.rs  player_stop_walking.rs  player_walk.rs  select_characters.rs  server_select.rs  skill_prepare.rs
src/plugins/: animation.rs  appear_disappear.rs  battle.rs  behead.rs  character_selection.rs  chat.rs  damage.rs  emote.rs  (+22 more)
(+114 files in other folders)
