[package]
name = "kal-packet-sniffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
clap = { version = "4.4.8", features = ["derive"] }
dashmap = "5.5.3"
tokio = { version = "1", features = ["full"] }

[env]
RUST_BACKTRACE = "1"
